Opened 12 years ago

Closed 10 years ago

#9967 closed bug (fixed)

[HaikuDepot] can't be opened if package_daemon isn't running

Reported by: diver Owned by: stippi
Priority: normal Milestone: R1
Component: Applications/HaikuDepot Version: R1/Package Management
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

It would be nice to ask user to start package_daemon like MediaPlayer asks to start media_server in case it's not running.

Change History (2)

comment:1 by anevilyak, 12 years ago

The startup problem has been fixed in db259584cacc8003271f839e49bc2963420af1b4. It doesn't yet ask about starting package_daemon, but there are still quite a lot of more urgent things to get functioning in HaikuDepot first.

comment:2 by stippi, 10 years ago

Resolution: fixed
Status: newclosed

Implemented in hrev48560.

Note: See TracTickets for help on using tickets.