HaikuDepot: Check if package_daemon runs and offer to start it

Fixes ticket #9967.