src/apps/haikudepot/ui/App.h
@@ -32,6 +32,9 @@ private:
 			void				_StoreSettings(const BMessage& windowSettings);
 			BRect				_GetNextWindowFrame(bool singlePackageMode);
 
+			void				_CheckPackageDaemonRuns();
+			bool				_LaunchPackageDaemon();
+
 private:
 			MainWindow*			fMainWindow;
 			int32				fWindowCount;
